# VisionForge

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  loader.py
backend/src/api/: account.py  auth.py  errors.py  routers.py
backend/src/data/: config.py  database.py
backend/src/schemas/: auth.py
backend/src/utils/: oauth2_utils.py  other.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/modules/: auth.ts  swal2.ts
frontend/src/router/: index.ts
frontend/src/views/: HomePage.vue  Login.vue  Registration.vue
